# Aura

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/ast/: block.hpp  declaration.hpp  expression.hpp  expresstype.hpp  varname.hpp  vartype.hpp
include/lexer/: lexer.hpp  token.hpp  tokentype.hpp
include/lexer/fsm/: fsm.hpp
include/parser/: parser.hpp
include/util/: charutil.hpp  exception.hpp
include/utils/: exception.hpp
src/: CMakeLists.txt  run.cpp
src/ast/: block.cpp  declaration.cpp  expression.cpp  varname.cpp  vartype.cpp
src/lexer/: CMakeLists.txt  lexer.cpp  token.cpp
src/lexer/fsm/: fsm.cpp
src/parser/: parser.cpp
src/util/: CMakeLists.txt  charutil.cpp  exception.cpp
src/utils/: charutil.cpp
test/: CMakeLists.txt  test.cpp
test/lexer/: lexer-test.cpp
